[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/dialogs/ImportDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/projects/ProjectsTab.gd" type="Script" id=2]
[ext_resource path="res://src/dialogs/NewProject.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/dialogs/EditProjectDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://styles/ColumnSortBar.tres" type="Theme" id=5]
[ext_resource path="res://src/components/ColumnSort.tscn" type="PackedScene" id=6]
[ext_resource path="res://styles/Popup.tres" type="Theme" id=7]
[ext_resource path="res://src/dialogs/BaseDialog.gd" type="Script" id=8]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 5.0
content_margin_bottom = 5.0

[node name="Projects" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 933.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBox"]
margin_right = 933.0
margin_bottom = 26.0
mouse_filter = 1
theme = ExtResource( 5 )

[node name="HBox" type="HBoxContainer" parent="VBox/PanelContainer"]
margin_right = 933.0
margin_bottom = 26.0
custom_constants/separation = 0

[node name="spacer" type="Control" parent="VBox/PanelContainer/HBox"]
margin_right = 75.0
margin_bottom = 26.0
rect_min_size = Vector2( 75, 0 )

[node name="ColumnSort" parent="VBox/PanelContainer/HBox" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_right = 552.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Name"
group = SubResource( 1 )

[node name="ColumnSort3" parent="VBox/PanelContainer/HBox" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 552.0
margin_right = 712.0
margin_bottom = 26.0
rect_min_size = Vector2( 160, 0 )
text = "Engine Version"
group = SubResource( 1 )
sort_type = 2

[node name="ColumnSort4" parent="VBox/PanelContainer/HBox" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 712.0
margin_right = 822.0
margin_bottom = 26.0
rect_min_size = Vector2( 110, 0 )
text = "Last Opened"
group = SubResource( 1 )
sort_type = 0

[node name="spacer2" type="Control" parent="VBox/PanelContainer/HBox"]
margin_left = 822.0
margin_right = 933.0
margin_bottom = 26.0
rect_min_size = Vector2( 111, 0 )

[node name="Scroll" type="ScrollContainer" parent="VBox"]
margin_top = 30.0
margin_right = 933.0
margin_bottom = 600.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 2 )
scroll_horizontal_enabled = false

[node name="ProjectList" type="VBoxContainer" parent="VBox/Scroll"]
margin_left = 15.0
margin_top = 5.0
margin_right = 918.0
margin_bottom = 5.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="Dialogs" type="Node" parent="."]

[node name="NewProject" parent="Dialogs" instance=ExtResource( 3 )]

[node name="ImportFile" type="FileDialog" parent="Dialogs"]
margin_right = 307.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 400 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "project.godot", "engine.cfg" )
current_dir = "/home/jwestman/Documents/hourglass"
current_path = "/home/jwestman/Documents/hourglass/"

[node name="ImportDialog" parent="Dialogs" instance=ExtResource( 1 )]

[node name="EditProjectDialog" parent="Dialogs" instance=ExtResource( 4 )]

[node name="ConfirmRemove" type="CanvasLayer" parent="Dialogs"]
script = ExtResource( 8 )

[node name="Label" type="Label" parent="Dialogs/ConfirmRemove"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 220, 0 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropdownMenu" type="PopupPanel" parent="."]
visible = true
margin_left = 937.0
margin_right = 1024.0
margin_bottom = 154.0
size_flags_vertical = 0
theme = ExtResource( 7 )

[node name="VBox" type="VBoxContainer" parent="DropdownMenu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 149.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="Button" parent="DropdownMenu/VBox"]
margin_right = 77.0
margin_bottom = 24.0
text = "Open"

[node name="Run" type="Button" parent="DropdownMenu/VBox"]
margin_top = 30.0
margin_right = 77.0
margin_bottom = 54.0
text = "Run"

[node name="ShowFiles" type="Button" parent="DropdownMenu/VBox"]
margin_top = 60.0
margin_right = 77.0
margin_bottom = 84.0
text = "Show Files"

[node name="Edit" type="Button" parent="DropdownMenu/VBox"]
margin_top = 90.0
margin_right = 77.0
margin_bottom = 114.0
text = "Edit"

[node name="Remove" type="Button" parent="DropdownMenu/VBox"]
margin_top = 120.0
margin_right = 77.0
margin_bottom = 144.0
text = "Remove"
[connection signal="file_selected" from="Dialogs/ImportFile" to="." method="_on_ImportFile_file_selected"]
[connection signal="confirmed" from="Dialogs/ConfirmRemove" to="." method="_on_ConfirmRemove_confirmed"]
[connection signal="pressed" from="DropdownMenu/VBox/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="DropdownMenu/VBox/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="DropdownMenu/VBox/ShowFiles" to="." method="_on_ShowFiles_pressed"]
[connection signal="pressed" from="DropdownMenu/VBox/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="DropdownMenu/VBox/Remove" to="." method="_on_Remove_pressed"]
